[build-system]
requires = ["setuptools>=61.0.0", "wheel>=0.37.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mooncake-transfer-engine"
dynamic = ["version"]
description = "Python binding of a Mooncake library using pybind11"
authors = [
    { name = "Mooncake Authors" }
]
requires-python = ">=3.8"
dependencies = ["aiohttp", "requests"]
keywords = ["mooncake", "data transfer", "kv cache", "llm inference"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: POSIX :: Linux",
]


[project.urls]
Homepage = "https://github.com/kvcache-ai/Mooncake"
Documentation = "https://github.com/kvcache-ai/Mooncake/tree/main/doc"
Source = "https://github.com/kvcache-ai/Mooncake"
Issues = "https://github.com/kvcache-ai/Mooncake/issues"

[project.scripts]
mooncake_master = "mooncake.cli:main"
mooncake_client = "mooncake.cli_client:main"
transfer_engine_bench = "mooncake.cli_bench:main"
mooncake_http_metadata_server = "mooncake.http_metadata_server:main"
mc_store_rest_server = "mooncake.mooncake_store_service:main"
transfer_engine_topology_dump = "mooncake.transfer_engine_topology_dump:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["mooncake*"]

[tool.setuptools.package-data]
mooncake = ["*.so", "mooncake_master", "mooncake_client", "transfer_engine_bench"]

[tool.setuptools_scm]
root = ".."
local_scheme = "mooncake._version:local_version"
